Banking/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking
  labels:
    app: banking
    environment: production
